added formatting to table
still some more to be done though

--- a/HTML/Spatial_Query.html
+++ b/HTML/Spatial_Query.html
@@ -191,13 +191,13 @@ map.on('draw:edited', function (e) {
 .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-top-width:1px;border-bottom-width:1px;}
 .tg .tg-yw4l{vertical-align:top}
 </style>
-<table id = "resultsTable" class = "tg">
+<table id = "resultsTable" class = "tablesorter" style = "background-color:#e5f1fd" >
 <thead>
 <tr>	
 	<th>	Author</th>	
 	<th>	File Name	</th>	
 	<th>	Download Links</th>
-	<th>Show on Map Button</th>
+	<th>Show on Map</th>
 </tr>
 </thead>
 
