added ability to resize results table
-the dimensions of the resizing can be changed easily if necessary
-other minor changes made as well

--- a/HTML/Spatial_Query.html
+++ b/HTML/Spatial_Query.html
@@ -183,6 +183,8 @@ map.on('draw:edited', function (e) {
 
 <!-- RESULTS TABLE -->
 <div id = "results">
+<button id = "expandResults"  onclick = "resizeResultsTable()" style = "visibility: visible">Expand Results</button>
+<button id = "shrinkResults"  onclick = "resizeResultsTable()" style = "visibility: hidden">Shrink Results</button>
 <h1 id = 'header'> RESULTS </h1>
 <h1 id = 'subHeader'>  </h1>
 <style type="text/css">
